@@ -30,6 +30,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC8696 providing using Pre-Shared Key (PSK) in the CMS
 - Add RFC5639 providing identifiers for the Brainpool curves in
   Elliptic Curve Cryptography
+- Add RFC5697 providing Other Certificates Extension
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
